--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
+  },
+  "cuttlebelle": {
+		"site": {
+			"root": "https://miran248.github.io/cuttlebelle-test/"
+    }
   }
 }
